[package]
name = "actix"
version = "0.6.0-dev"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actor framework for Rust"
readme = "README.md"
keywords = ["actor", "futures", "actix", "async", "tokio"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix.git"
documentation = "https://docs.rs/actix/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]

[badges]
travis-ci = { repository = "actix/actix", branch = "master" }
appveyor = { repository = "fafhrd91/actix-n9e64" }
codecov = { repository = "actix/actix", branch = "master", service = "github" }

[lib]
name = "actix"
path = "src/lib.rs"

[workspace]
members = ["examples/chat"]

[features]
default = ["signal", "resolver"]

# dns resolver
resolver = ["trust-dns-resolver"]

# signal handling
signal = ["tokio-signal"]

[dependencies]
actix_derive = "0.2"

# io
bytes = "0.4"
futures = "0.1"
tokio = { git = "https://gitlab.redox-os.org/redox-os/tokio" }
tokio-io = { git = "https://gitlab.redox-os.org/redox-os/tokio" }
tokio-executor = { git = "https://gitlab.redox-os.org/redox-os/tokio" }
tokio-reactor = { git = "https://gitlab.redox-os.org/redox-os/tokio" }
tokio-tcp = { git = "https://gitlab.redox-os.org/redox-os/tokio" }
tokio-timer = { git = "https://gitlab.redox-os.org/redox-os/tokio" }
tokio-threadpool = { git = "https://gitlab.redox-os.org/redox-os/tokio" }

# other
log = "0.4"
failure = "0.1.1"
bitflags = "1.0"
smallvec = "0.6"
crossbeam-channel = "0.2"
libc = { version = "0.2" }
uuid = { version = "0.6", features = ["v4"] }

# signal handling
tokio-signal = { git = "https://gitlab.redox-os.org/redox-os/tokio-signal", optional = true }

# dns resolver
trust-dns-resolver = { git = "https://gitlab.redox-os.org/redox-os/trust-dns", optional = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
